...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UseName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Sk-RQ-wTk">
                                <rect key="frame" x="262" y="114" width="76" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cfd-tO-LeK">
                                <rect key="frame" x="263" y="150" width="74" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
...
                        <viewControllerLayoutGuide type="bottom" id="021-N2-SJD"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="Atl-yc-fZ5">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="landing_new" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2UK-ZS-951">
                                <rect key="frame" x="198" y="572" width="151" height="50"/>
                                <color key="backgroundColor" red="0.27843137254901962" green="0.16078431372549018" blue="0.16862745098039217" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" label="landing_new"/>
                                <rect key="contentStretch" x="1.3877787807814457e-17" y="0.0" width="1" height="1"/>
                                <constraints>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="XTF-6A-9PB"/>
...
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oLy-k1-wtG">
                                <rect key="frame" x="0.0" y="0.0" width="600" height="800"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="  EMAIL*" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pZB-iQ-fG8" customClass="MoTextField" customModule="Qashio" customModuleProvider="target">
                                        <rect key="frame" x="28" y="220" width="545" height="40"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                        <accessibility key="accessibilityConfiguration" label="email"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="497" id="5Zo-sm-N5e"/>
                                            <constraint firstAttribute="height" constant="40" id="GcH-fz-1OX"/>
                                            <constraint firstAttribute="width" constant="497" id="hy5-uA-f2J"/>
                                            <constraint firstAttribute="width" constant="497" id="jnV-ex-tvp"/>
                                        </constraints>
...
                                            </mask>
                                        </variation>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5gi-A2-Ows">
                                        <rect key="frame" x="28" y="580" width="545" height="40"/>
                                        <color key="backgroundColor" red="0.2784313725" green="0.16078431369999999" blue="0.16862745100000001" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" label="signup"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="hSG-VG-ni4"/>
                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="w2Z-VY-kuv"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                        <color key="tintColor" red="0.00074140717159999997" green="0.00069093522400000002" blue="0.001736111111" alpha="1" colorSpace="calibratedRGB"/>
                                        <state key="normal" title="Sign Up">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <variation key="default">
                                            <mask key="constraints">
                                                <exclude reference="w2Z-VY-kuv"/>
...
